# fyp-3

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  PROJECT_STATUS.md  README.md  UPDATE_SUMMARY.md  codemap.md  pyproject.toml  scratch_test_login_ui.py  skills-lock.json
.agents/agents/: domain.md  issue-tracker.md  triage-labels.md
.agents/issues/: codebase_refactoring_plan.md  head_pose_enrollment_plan.md  srs_v2_implementation_roadmap.md
.agents/tmp/: pr-body.md
.github/: copilot-instructions.md
.github/issues/: srs_v2_implementation_roadmap.md
.opencode/: review-checklist.completed.md
.slim/: codemap.json
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: README.md  ai-pipeline.md  architecture.md  codemap.md  database.md  modules.md  project-layout.md
docs/.obsidian/: appearance.json  workspace.json
docs/.slim/: codemap.json
docs/adr/: 0001-onnx-circuit-breaker.md
docs/agents/: domain.md
docs/plans/: README.md
docs/project-report/: chuong-1.md  chuong-2.md  chuong-3.md  chuong-4.md  chuong-5.md  codemap.md  format-rules.md  outline.md  presentation-format.md
docs/srs/: chuong_1.md  chuong_2.md  chuong_3.md  chuong_4.md  fyp.md  index.md  srs_2.md
docs/srs_module/: srs_module_1.md
scripts/: codemap.md  diagnose_poor_light.py  hypothesis_test_poor_light.py  reset_users.py  test_poor_light_liveness.py  tune_liveness_threshold.py
specs/001-database-storage-core/: data-model.md  plan.md  research.md  (+3 more)
src/: codemap.md  main.py
tests/: conftest.py
(+257 files in other folders)
